--- a/index.html
+++ b/index.html
@@ -423,7 +423,11 @@
 
             // Add Desclaimer
             doc.setFontSize(8);
-            doc.text('Disclaimer: This calculator provides estimates only. Actual returns may vary. Past performance is not indicative of future returns. Mutual fund investments are subject to market risks. Read all scheme-related documents carefully. This tool is for educational purposes only and is not intended as investment advice. All calculations are based on the provided inputs and assumptions regarding returns. Developed by Dipankar Adhikary | Not affiliated with any financial institution. Dipankar Adhikary is not liable for any discrepancies or losses arising from the use of this calculator.', 15, 150);
+            doc.text('Disclaimer: This calculator provides estimates only. Actual returns may vary. Past performance is not indicative of future returns.', 15, 150);
+            doc.text('Mutual fund investments are subject to market risks. Read all scheme-related documents carefully.', 15, 153); 
+            doc.text('This tool is for educational purposes only and is not intended as investment advice.', 15, 156);
+            doc.text('All calculations are based on the provided inputs and assumptions regarding returns. Not affiliated with any financial institution.', 15, 159);
+            doc.text('Dipankar Adhikary is not liable for any discrepancies or losses arising from the use of this calculator.', 15, 162);
             
             // Save PDF
             doc.save('SIP-Report.pdf');
