--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
 
             doc.setFontSize(10);
             doc.setTextColor(darkText[0], darkText[1], darkText[2]);
-            doc.text(`-> Total Invested Amount (INR): ${formatNumber(calculatedData.totalInvested)}`, 15, 69);
-            doc.text(`-> Estimated Returns (INR): ${formatNumber(calculatedData.estimatedReturns)}`, 15, 75);
-            doc.text(`-> Total Maturity Value (INR): ${formatNumber(calculatedData.totalValue)}`, 15, 81);
+            doc.text(`>> Total Invested Amount (INR): ${formatNumber(calculatedData.totalInvested)}`, 15, 69);
+            doc.text(`>> Estimated Returns (INR): ${formatNumber(calculatedData.estimatedReturns)}`, 15, 75);
+            doc.text(`>> Total Maturity Value (INR): ${formatNumber(calculatedData.totalValue)}`, 15, 81);
 
             // Yearly Breakdown Table
             const headers = ['Year', 'Invested (INR)', 'Returns (INR)', 'Total Value (INR)'];
@@ -438,11 +438,11 @@
                 doc.setFontSize(10);
                 doc.setTextColor(100);
                 const disclaimer = [
-                    '* Disclaimer: This calculator provides estimates only. Actual returns may vary.',
-                    'Mutual fund investments are subject to market risks. Read all scheme-related documents carefully.',
-                    'This tool is for educational purposes only and is not intended as investment advice.',
-                    'All calculations are based on provided inputs and assumptions. Not affiliated with any financial institution.',
-                    'Dipankar Adhikary is not liable for any discrepancies or losses arising from use of this calculator. *'
+                    '*Disclaimer: This calculator provides estimates only. Actual returns may vary.',
+                    ' Mutual fund investments are subject to market risks. Read all scheme-related documents carefully.',
+                    ' This tool is for educational purposes only and is not intended as investment advice.',
+                    ' All calculations are based on provided inputs and assumptions. Not affiliated with any financial institution.',
+                    ' Dipankar Adhikary is not liable for any discrepancies or losses arising from the use of this calculator. *'
                 ];
 
                 let offsetY = finalY;
